[gd_scene load_steps=5 format=3 uid="uid://w5vjdipkcmlb"]

[ext_resource type="Script" path="res://scripts/customer.gd" id="1_fc8pt"]
[ext_resource type="Texture2D" uid="uid://bo86qpgtd1mju" path="res://pics/woman.png" id="2_bn6kp"]
[ext_resource type="Texture2D" uid="uid://iwfwadbvwh4v" path="res://pics/free-speech-bubble-icon-1078-thumb.png" id="3_ndww4"]

[sub_resource type="LabelSettings" id="LabelSettings_d7k52"]
font_size = 24

[node name="Customer" type="Node2D"]
script = ExtResource("1_fc8pt")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="TimeRemainingLabel" type="Label" parent="."]
offset_left = -115.0
offset_top = 243.0
offset_right = -75.0
offset_bottom = 277.0
text = "60s"
label_settings = SubResource("LabelSettings_d7k52")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(444, 433)
scale = Vector2(0.186116, 0.186116)
texture = ExtResource("2_bn6kp")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SpeechBubble" type="Sprite2D" parent="."]
position = Vector2(559, 328)
scale = Vector2(0.401855, 0.270996)
texture = ExtResource("3_ndww4")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
